# vcs_gateway

./: .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.infra.yml  docker-compose.yml  pyproject.toml
.claude/commands/: commit.md  review-architecture-guard.md  review.md
.claude/skills/db-migrate/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/self-review/: SKILL.md
.claude/skills/test/: SKILL.md
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_PLAN.md  TODO_service_feature.md  vcs_gateway_service.md
docs/grouped/: useful_command.md
memory/: MEMORY.md
migrations/: README.md  env.py
migrations/versions/: 0001_initial.py  0002_seed_shared_schema.py
scripts/: check-health.sh  dev-setup.sh
src/vcs_gateway/: config.py  main.py  worker.py
src/vcs_gateway/api/: exception_handlers.py  health.py
src/vcs_gateway/api/internal/: endpoints.py
src/vcs_gateway/api/v1/: endpoints.py  webhooks.py
src/vcs_gateway/core/: exceptions.py  logging.py  middleware.py  signature.py  telemetry.py
src/vcs_gateway/db/: connection.py  outbox.py  repository.py
src/vcs_gateway/db/repositories/: inbound_event_repository.py  tenant_repository.py  tenant_vcs_config_repository.py
src/vcs_gateway/models/: domain.py  events.py  requests.py
src/vcs_gateway/queue/: connection.py  consumer.py  publisher.py
src/vcs_gateway/redis/: client.py
src/vcs_gateway/services/: vcs_gateway.py
src/vcs_gateway/services/webhook_processor/: event_filter.py  idempotency_checker.py  payload_parser.py  tenant_validator.py  webhook_persister.py
tests/: conftest.py
tests/e2e/: test_flow.py
tests/integration/: test_db.py
tests/unit/: test_example.py
